--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,18 @@
 [project]
 name = "advent-of-code-2024"
-version = "0.0.1"
+version = "0.1.0"
 authors = [
   { name="James Lawlor", email="jameslawlor1987@gmail.com" },
 ]
 description = "Code for Advent of Code 2024"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-packages = ["src"]
+packages = ["advent_of_code_2024"]
 
 [project.urls]
 Homepage = "https://github.com/jameslawlor/advent-of-code-2024"
@@ -22,14 +22,14 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
+packages = ["advent_of_code_2024"]
 
 [tool.pytest.ini_options]
-pythonpath = "src"
+pythonpath = "advent_of_code_2024"
 addopts = [
     "--import-mode=importlib",
 ]
 
 [tool.black]
 line-length = 88
-target-version = ['py39']
+target-version = ['py312']
